# TwitterTrendsOOPLab

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Parsers/: JSONMapParser.cpp  JSONMapParser.h  ParserTxt.cpp  ParserTxt.h  ParsersCSV.cpp  ParsersCSV.h  ParsersJSON.cpp  ParsersJSON.h  ParsersTxt.cpp  ParsersTxt.h  Polygon.h  State.cpp  State.h
algorithms/: scalings.cpp  scalings.h  sentiment_score.cpp  sentiment_score.h
data_structures/: Bor.h
entity/: Polygon.h  Sentiments.h  State.cpp  State.h  Tweet.h
handlers/: DataProcessingHandler.cpp  DataProcessingHandler.h  ParserHandler.cpp  ParserHandler.h  renderHandler.cpp  renderHandler.h
renders/: Render.cpp  Render.h
resources/data/: family_tweets2014.txt  football_tweets2014.txt  movie_tweets2014.txt  sentiments.csv  snow_tweets2014.txt  states.json
utils/: Polygon.h
